--- a/app/views/api/v1/posts/destroy.html.erb
+++ b/app/views/api/v1/posts/destroy.html.erb
@@ -8,5 +8,7 @@
 
 <% @posts.each do |post|%>
 <%= post.title %>
-<%= link_to '削除', api_v1_post_path(post), method: :delete, data:{ confirm: '本当に削除しますか？'}%>
+<%= form_with(model: post, url: api_v1_post_path(post), method: :delete) do |form| %>
+<%= form.submit '削除', data: { confirm: '本当に削除しますか？'} %>
+<% end %>
 <% end %>
