DBエラーあり

--- a/app/views/api/v1/posts/new.html.erb
+++ b/app/views/api/v1/posts/new.html.erb
@@ -24,6 +24,11 @@
 </div>
 
 <div>
+    <%= form.label :image, '画像' %>
+    <%= form.file_field :image %>
+</div>
+
+<div>
     <%= form.submit '投稿する' %>
 </div>
 <% end %>
