--- a/app/views/api/v1/posts/edit.html.erb
+++ b/app/views/api/v1/posts/edit.html.erb
@@ -12,6 +12,11 @@
 </div>
 
 <div>
+    <%= form.label :image, '画像' %>
+    <%= form.file_field :image %>
+</div>
+
+<div>
     <%= form.submit  '更新' %>
 </div>
 <% end %>
