--- a/app/views/api/v1/posts/index.html.erb
+++ b/app/views/api/v1/posts/index.html.erb
@@ -12,6 +12,7 @@
         <tr>
             <th>タイトル</th>
             <th>内容</th>
+            <th>画像</th>
             <th colspan="3"></th>
         </tr>
     </thead>
@@ -20,6 +21,13 @@
     <tr>
         <td><%= post.title %></td>
         <td><%= post.content.truncate(20) %></td>
+        <td>
+            <% if post.image.attached? %>
+            <%= image_tag post.image, size: "100x100" %>
+            <% else %>
+            <p>画像はありません</p>
+            <% end %>
+        </td>
         <td><%= link_to '詳細', api_v1_post_path(post) %></td>
         <td><%= link_to '編集', edit_api_v1_post_path(post) %></td>
         <td>
