--- a/app/views/api/v1/posts/index.html.erb
+++ b/app/views/api/v1/posts/index.html.erb
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>rails初心者ブログ</h1>
-<%= link_to '新規投稿', new_api_v1_post_path %>
+<div class="sinki-btn"><%= link_to '新規投稿', new_api_v1_post_path %></div>
 <table>
     <thead>
         <tr>
